set body padding and update #wrap padding also -paddings respect .navbar fixed height of 55px

--- a/static/gimu/css/gimu.css
+++ b/static/gimu/css/gimu.css
@@ -1,3 +1,7 @@
+body {
+	padding-top: 55px;
+}
+
 .navbar {
 	height: 55px;
 	margin: 0;
@@ -37,10 +41,11 @@
 	margin:0;
 	background:#333333;
 }
+
 #wrap{
-	padding-bottom:0;
-	padding-top:20px;
+	padding:0;
 }
+
 #gimu_footer{
 	position:absolute;
 	width:100%;
